# yandexDiskWebDav

./: .gitignore  CMakeLists.txt  main.c  res  tests.c
src/: client.c  client.h  error.c  error.h  network.c  network.h
tmp/: fifo.c  incompl_struct.c  inotify.c  inotifySig.c  md5test.c  t.c  testsBckps.c  testsV.c  thr2.c  varLen.c
